--- a/sass/_general.sass
+++ b/sass/_general.sass
@@ -10,7 +10,6 @@ $secondary: #ff7400
     box-sizing: border-box
     scroll-behavior: smooth
     font-family: 'Grafita'
-    line-height: 1.15
 a
     text-decoration: none
     color: $text-color
@@ -36,12 +35,50 @@ a
     text-align: center
     font-size: 14px
 
+.title
+    font-family: 'Calvino'
+    font-weight: 600
+    text-align: center
+    color: $text-color
+.text
+    color: $text-color
+    font-size: 18px
+    line-height: 1.35
+.input__wrapper
+    max-width: 414px
+    margin: auto
+    margin-bottom: 18px
+    display: flex
+    flex-direction: column
+.input
+    border: 0.5px solid #011C1A
+    border-radius: 12px
+    padding: 12px 16px
+    width: 100%
+    &::placeholder
+        font-size: 16px
+        line-height: 1.5
+        color: #8FB7C5
+        opacity: 0.5
+.label
+    color: $text-color
+    font-size: 14px
+    line-height: 1.7
+    opacity: 0.8
+    padding-left: 16px
+
 .creation-page
     background-color: $bg-color
     padding-top: 100px
     &__title
-        font-family: 'Calvino'
-        font-weight: 600
-        text-align: center
         font-size: 60px
         margin-bottom: 50px
+    &__section
+        background-color: #fff
+        border-radius: 40px
+        padding: 30px 55px 45px
+    &__section-title
+        font-size: 40px
+        margin-bottom: 25px
+    &__text
+        text-align: center
