--- a/style/style.css
+++ b/style/style.css
@@ -19,7 +19,6 @@
           box-sizing: border-box;
   scroll-behavior: smooth;
   font-family: 'Grafita';
-  line-height: 1.15;
 }
 
 a {
@@ -52,17 +51,98 @@ a {
   font-size: 14px;
 }
 
+.title {
+  font-family: 'Calvino';
+  font-weight: 600;
+  text-align: center;
+  color: #011C1A;
+}
+
+.text {
+  color: #011C1A;
+  font-size: 18px;
+  line-height: 1.35;
+}
+
+.input__wrapper {
+  max-width: 414px;
+  margin: auto;
+  margin-bottom: 18px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.input {
+  border: 0.5px solid #011C1A;
+  border-radius: 12px;
+  padding: 12px 16px;
+  width: 100%;
+}
+
+.input::-webkit-input-placeholder {
+  font-size: 16px;
+  line-height: 1.5;
+  color: #8FB7C5;
+  opacity: 0.5;
+}
+
+.input:-ms-input-placeholder {
+  font-size: 16px;
+  line-height: 1.5;
+  color: #8FB7C5;
+  opacity: 0.5;
+}
+
+.input::-ms-input-placeholder {
+  font-size: 16px;
+  line-height: 1.5;
+  color: #8FB7C5;
+  opacity: 0.5;
+}
+
+.input::placeholder {
+  font-size: 16px;
+  line-height: 1.5;
+  color: #8FB7C5;
+  opacity: 0.5;
+}
+
+.label {
+  color: #011C1A;
+  font-size: 14px;
+  line-height: 1.7;
+  opacity: 0.8;
+  padding-left: 16px;
+}
+
 .creation-page {
   background-color: #F7FAFC;
   padding-top: 100px;
 }
 
 .creation-page__title {
-  font-family: 'Calvino';
-  font-weight: 600;
-  text-align: center;
   font-size: 60px;
   margin-bottom: 50px;
+}
+
+.creation-page__section {
+  background-color: #fff;
+  border-radius: 40px;
+  padding: 30px 55px 45px;
+}
+
+.creation-page__section-title {
+  font-size: 40px;
+  margin-bottom: 25px;
+}
+
+.creation-page__text {
+  text-align: center;
 }
 
 .header {
@@ -87,4 +167,64 @@ a {
 
 .header__logo {
   max-width: 100px;
+}
+
+.creation-main__text {
+  margin-bottom: 5px;
+}
+
+.creation-main__subtext {
+  margin: 0 auto 20px;
+  font-size: 14px;
+  color: #73A5B7;
+  text-align: center;
+}
+
+.creation-main__photo {
+  overflow: hidden;
+  margin: auto;
+  width: 200px;
+  height: 256px;
+  background: #C7DBE2;
+  border-radius: 200px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  cursor: pointer;
+  margin-bottom: 18px;
+}
+
+.creation-main__photo img {
+  display: block;
+  margin: auto;
+  margin-bottom: 12px;
+}
+
+.creation-main__photo p {
+  text-align: center;
+  font-size: 14px;
+}
+
+.creation-main__date-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.creation-main__date {
+  -ms-flex-preferred-size: 48%;
+      flex-basis: 48%;
 }
