color template section

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,6 +1,6 @@
 @font-face 
 	font-family: 'Grafita'
-	src: url('../fonts/Grafita.otf') format('opentype')
+	src: url('../fonts/Grafita normal.otf') format('opentype')
 	font-weight: normal
 	font-style: normal
 @font-face 
@@ -12,3 +12,4 @@
 @import 'general'
 @import 'header'
 @import 'creation-page-main'
+@import 'creation-page-template'
