--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'Grafita';
-  src: url("../fonts/Grafita.otf") format("opentype");
+  src: url("../fonts/Grafita normal.otf") format("opentype");
   font-weight: normal;
   font-style: normal;
 }
@@ -51,6 +51,10 @@ a {
   font-size: 14px;
 }
 
+.mb-0 {
+  margin-bottom: 0 !important;
+}
+
 .title {
   font-family: 'Calvino';
   font-weight: 600;
@@ -82,6 +86,7 @@ a {
   border-radius: 12px;
   padding: 12px 16px;
   width: 100%;
+  color: #011C1A;
 }
 
 .input::-webkit-input-placeholder {
@@ -133,7 +138,8 @@ a {
 .creation-page__section {
   background-color: #fff;
   border-radius: 40px;
-  padding: 30px 55px 45px;
+  padding: 30px 21px 45px;
+  margin-bottom: 50px;
 }
 
 .creation-page__section-title {
@@ -227,4 +233,93 @@ a {
 .creation-main__date {
   -ms-flex-preferred-size: 48%;
       flex-basis: 48%;
+}
+
+.creation-template__wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: calc(100% + 20px);
+  -webkit-transform: translateX(-10px);
+          transform: translateX(-10px);
+}
+
+.creation-template__item {
+  -ms-flex-preferred-size: 25%;
+      flex-basis: 25%;
+  padding: 0 10px;
+}
+
+.creation-template__hero {
+  overflow: hidden;
+  border-radius: 28px;
+  border: 0.5px solid #000;
+  margin-bottom: 24px;
+}
+
+.creation-template__hero img {
+  width: 100%;
+}
+
+.creation-template__info {
+  padding: 7px 23px 18px;
+}
+
+.creation-template__info h4 {
+  font-family: 'Calvino';
+  font-weight: 600;
+  font-size: 7px;
+  line-height: 2.3;
+  text-align: center;
+  color: #011C1A;
+  text-align: left;
+}
+
+.creation-template__info p {
+  font-size: 4px;
+  text-align: left;
+}
+
+.creation-template__name {
+  text-align: center;
+  opacity: 0.8;
+}
+
+.creation-template__radio {
+  position: relative;
+  margin: auto;
+  margin-bottom: 5px;
+  display: block;
+  cursor: pointer;
+  width: 20px;
+  height: 20px;
+}
+
+input[type="radio"]:checked::before {
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  content: '';
+  width: 24px;
+  height: 24px;
+  background: #fff;
+  border-radius: 50%;
+}
+
+input[type="radio"]:checked::after {
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  content: '';
+  width: 24px;
+  height: 24px;
+  background: url("../assets/check-circle.svg") no-repeat;
 }
