--- a/sass/_general.sass
+++ b/sass/_general.sass
@@ -69,7 +69,7 @@ a
     line-height: 1.7
     opacity: 0.8
     padding-left: 16px
-
+    margin-bottom: 8px
 .creation-page
     background-color: $bg-color
     padding-top: 100px
