--- a/sass/_general.sass
+++ b/sass/_general.sass
@@ -27,7 +27,7 @@ a
     border: none
     outline: none
     cursor: pointer
-    border: 1px solid $text-color
+    border: 0.5px solid $text-color
     border-radius: 12px
     padding: 14px 16px
     color: $text-color
@@ -64,6 +64,7 @@ a
         color: #8FB7C5
         opacity: 0.5
 .label
+    display: block
     color: $text-color
     font-size: 14px
     line-height: 1.7
