--- a/sass/style.sass
+++ b/sass/style.sass
@@ -13,4 +13,4 @@
 @import 'header'
 @import 'creation-page-main'
 @import 'creation-page-template'
-@import 'creation-page-epitaph'
+@import 'creation-page-epitaph-media'
