--- a/style/style.css
+++ b/style/style.css
@@ -42,7 +42,7 @@ a {
   border: none;
   outline: none;
   cursor: pointer;
-  border: 1px solid #011C1A;
+  border: 0.5px solid #011C1A;
   border-radius: 12px;
   padding: 14px 16px;
   color: #011C1A;
@@ -118,6 +118,7 @@ a {
 }
 
 .label {
+  display: block;
   color: #011C1A;
   font-size: 14px;
   line-height: 1.7;
@@ -328,5 +329,92 @@ input[type="radio"]:checked::after {
 .creation-epitaph__text {
   margin-bottom: 30px;
   text-align: center;
+  padding: 0 25px;
+}
+
+.creation-media__text {
+  margin-bottom: 30px;
+  text-align: center;
   padding: 0 65px;
+}
+
+.creation-media__photo-text {
+  margin-bottom: 18px;
+}
+
+.creation-media__photo-text span {
+  font-size: 14px;
+  color: #C69A39;
+  opacity: 0.8;
+}
+
+.creation-media__photo-wrap {
+  overflow: hidden;
+  width: 150px;
+  height: 150px;
+  border: 0.5px solid #011C1A;
+  border-radius: 28px;
+  cursor: pointer;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 30px;
+}
+
+.creation-media__photo-hero {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.creation-media__photo-hero svg {
+  margin: auto;
+  margin-bottom: 10px;
+}
+
+.creation-media__photo-hero p {
+  opacity: 0.8;
+  text-align: center;
+  font-size: 14px;
+}
+
+.creation-media__inputs {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.creation-media__inputs input {
+  -ms-flex-preferred-size: 50%;
+      flex-basis: 50%;
+}
+
+.creation-media__inputs p {
+  font-size: 14px;
+}
+
+.creation-media__attachment {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 3px 16px;
 }
