memories and refs sections

--- a/sass/_general.sass
+++ b/sass/_general.sass
@@ -1,7 +1,7 @@
 $text-color: #011C1A
 $bg-color: #F7FAFC 
 
-$primary: #5a75f8
+$primary: #C69A39
 $secondary: #ff7400
 
 *
@@ -34,6 +34,8 @@ a
     background-color: #fff
     text-align: center
     font-size: 14px
+    & img
+        margin-right: 3px
 .mb-0
     margin-bottom: 0 !important
 
