--- a/sass/style.sass
+++ b/sass/style.sass
@@ -14,3 +14,4 @@
 @import 'creation-page-main'
 @import 'creation-page-template'
 @import 'creation-page-epitaph-media'
+@import 'creation-page-refs-remembers'
