--- a/sass/_creation-page-epitaph-media.sass
+++ b/sass/_creation-page-epitaph-media.sass
@@ -13,7 +13,7 @@
         margin-bottom: 18px
         & span
             font-size: 14px
-            color: #C69A39
+            color: $primary
             opacity: 0.8
     &__photo-wrap
         overflow: hidden
