--- a/sass/style.sass
+++ b/sass/style.sass
@@ -15,3 +15,4 @@
 @import 'creation-page-template'
 @import 'creation-page-epitaph-media'
 @import 'creation-page-refs-remembers'
+@import 'creation-page-find'
