--- a/sass/_general.sass
+++ b/sass/_general.sass
@@ -73,6 +73,9 @@ a
     opacity: 0.8
     padding-left: 16px
     margin-bottom: 8px
+
+.bg-light-blue
+    background-color: $bg-color
 .creation-page
     background-color: $bg-color
     padding-top: 100px
@@ -89,3 +92,14 @@ a
         margin-bottom: 25px
     &__text
         text-align: center
+    &__btns
+        display: flex
+        align-items: center
+        justify-content: center
+        margin-bottom: 30px
+        & button
+            padding: 12px 38px
+    &__publish
+        margin-left: 20px
+        background-color: $primary
+        border: none
