--- a/sass/style.sass
+++ b/sass/style.sass
@@ -11,6 +11,8 @@
 
 @import 'general'
 @import 'header'
+@import 'footer'
+
 @import 'creation-page-main'
 @import 'creation-page-template'
 @import 'creation-page-epitaph-media'
