--- a/style/style.css
+++ b/style/style.css
@@ -208,6 +208,92 @@ a {
   max-width: 100px;
 }
 
+.footer {
+  background-color: #001211;
+  padding: 68px 80px 15px;
+}
+
+.footer__hero {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 70px;
+}
+
+.footer__nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.footer__logo {
+  margin-right: 120px;
+}
+
+.footer__menu {
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.footer__menu-item {
+  font-size: 14px;
+  margin-right: 40px;
+}
+
+.footer__menu-item a {
+  color: #C3DAE2;
+}
+
+.footer__socials {
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.footer__socials li {
+  margin-left: 30px;
+}
+
+.footer__copyright {
+  padding-top: 14px;
+  border-top: 1px solid #011C1A;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 10px;
+  line-height: 200%;
+}
+
+.footer__copyright span {
+  color: #C69A39;
+}
+
+.footer__copyright a {
+  color: #2D4443;
+  margin-left: 8px;
+}
+
 .creation-main__text {
   margin-bottom: 5px;
 }
