--- a/sass/_creation-page-epitaph-media.sass
+++ b/sass/_creation-page-epitaph-media.sass
@@ -1,15 +1,18 @@
 .creation-epitaph
     &__text
+        font-family: 'Grafita Special'
         margin-bottom: 30px
         text-align: center
         padding: 0 25px
 
 .creation-media
     &__text
+        font-family: 'Grafita Special'
         margin-bottom: 30px
         text-align: center
         padding: 0 65px
     &__photo-text
+        font-family: 'Grafita Special'
         margin-bottom: 18px
         & span
             font-size: 14px
