--- a/sass/_creation-page-refs-remembers.sass
+++ b/sass/_creation-page-refs-remembers.sass
@@ -1,5 +1,6 @@
 .creation-refs
     &__text
+        font-family: 'Grafita Special'
         text-align: center
         margin-bottom: 6px
         padding: 0 100px
@@ -16,6 +17,7 @@
 
 .creation-memories
     &__text
+        font-family: 'Grafita Special'
         text-align: center
         margin-bottom: 30px
         padding: 0 40px
