--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,11 +1,16 @@
 @font-face 
 	font-family: 'Grafita'
-	src: url('../fonts/Grafita normal.otf') format('opentype')
+	src: url('../fonts/Grafita Normal.otf') format('opentype')
+	font-weight: normal
+	font-style: normal
+@font-face 
+	font-family: 'Grafita Special'
+	src: url('../fonts/Grafita Special.otf') format('opentype')
 	font-weight: normal
 	font-style: normal
 @font-face 
 	font-family: 'Calvino'
-	src: url('../fonts/Calvino-Semibold.ttf') format('truetype')
+	src: url('../fonts/calvino/Calvino-Semibold-trial.ttf') format('truetype')
 	font-weight: 600
 	font-style: normal
 
