--- a/sass/_creation-page-find.sass
+++ b/sass/_creation-page-find.sass
@@ -1,7 +1,12 @@
 .creation-find
     &__text
+        font-family: 'Grafita Special'
         text-align: center
         margin-bottom: 30px
+    &__subtext
+        font-family: 'Grafita Special'
+        text-align: center
+        margin-bottom: 18px
     &__map
         border-radius: 28px
         width: 100%
@@ -10,7 +15,7 @@
         max-width: 414px
         display: flex
         justify-content: space-between
-        margin: 18px auto 14px
+        margin: 0 auto 14px
     &__coord
         flex-basis: 48%
     &__help
