--- a/sass/_general.sass
+++ b/sass/_general.sass
@@ -60,11 +60,18 @@ a
     padding: 12px 16px
     width: 100%
     color: $text-color
+    transition: border .2s ease
     &::placeholder
         font-size: 16px
         line-height: 1.5
         color: #8FB7C5
         opacity: 0.5
+    &:focus 
+        outline: none !important
+        border-color: $primary
+    &:active
+        outline: none !important
+        border-color: $primary
 .label
     display: block
     color: $text-color
@@ -76,6 +83,7 @@ a
 
 .bg-light-blue
     background-color: $bg-color
+
 .creation-page
     background-color: $bg-color
     padding-top: 100px
@@ -92,6 +100,7 @@ a
         margin-bottom: 25px
     &__text
         text-align: center
+        font-family: 'Grafita Special'
     &__btns
         display: flex
         align-items: center
