btn hover added

--- a/sass/_general.sass
+++ b/sass/_general.sass
@@ -36,6 +36,11 @@ a
     font-size: 14px
     & img
         margin-right: 3px
+.creation-btn
+    transition: background-color .3s ease
+    &:hover
+        background-color: $primary
+        border: 0.5px solid $primary
 .mb-0
     margin-bottom: 0 !important
 
