--- a/style/style.css
+++ b/style/style.css
@@ -62,6 +62,16 @@ a {
   margin-right: 3px;
 }
 
+.creation-btn {
+  -webkit-transition: background-color .3s ease;
+  transition: background-color .3s ease;
+}
+
+.creation-btn:hover {
+  background-color: #C69A39;
+  border: 0.5px solid #C69A39;
+}
+
 .mb-0 {
   margin-bottom: 0 !important;
 }
