--- a/sass/style.sass
+++ b/sass/style.sass
@@ -18,6 +18,7 @@
 @import 'header'
 @import 'footer'
 
+@import 'creation-page'
 @import 'creation-page-main'
 @import 'creation-page-template'
 @import 'creation-page-epitaph-media'
