--- a/style/style.css
+++ b/style/style.css
@@ -160,60 +160,6 @@ a {
   margin-bottom: 8px;
 }
 
-.bg-light-blue {
-  background-color: #F7FAFC;
-}
-
-.creation-page {
-  background-color: #F7FAFC;
-  padding-top: 100px;
-}
-
-.creation-page__title {
-  font-size: 60px;
-  margin-bottom: 50px;
-}
-
-.creation-page__section {
-  background-color: #fff;
-  border-radius: 40px;
-  padding: 30px 21px 45px;
-  margin-bottom: 50px;
-}
-
-.creation-page__section-title {
-  font-size: 40px;
-  margin-bottom: 25px;
-}
-
-.creation-page__text {
-  text-align: center;
-  font-family: 'Grafita Special';
-}
-
-.creation-page__btns {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  margin-bottom: 30px;
-}
-
-.creation-page__btns button {
-  padding: 12px 38px;
-}
-
-.creation-page__publish {
-  margin-left: 20px;
-  background-color: #C69A39;
-  border: none;
-}
-
 .header {
   width: 100%;
   background-color: #fff;
@@ -322,6 +268,64 @@ a {
 .footer__copyright a {
   color: #2D4443;
   margin-left: 8px;
+}
+
+.bg-light-blue {
+  background-color: #F7FAFC;
+}
+
+.creation-page {
+  background-color: #F7FAFC;
+  padding-top: 100px;
+}
+
+.creation-page__title {
+  font-size: 60px;
+  margin-bottom: 50px;
+}
+
+.creation-page__section {
+  background-color: #fff;
+  border-radius: 40px;
+  padding: 30px 21px 45px;
+  margin-bottom: 50px;
+}
+
+.creation-page__section-title {
+  font-size: 40px;
+  margin-bottom: 15px;
+}
+
+.creation-page__text {
+  text-align: center;
+  font-family: 'Grafita Special';
+}
+
+.creation-page__btns {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-bottom: 50px;
+}
+
+.creation-page__btns button {
+  padding: 12px 38px;
+}
+
+.creation-page__publish {
+  margin-left: 20px;
+  background-color: #C69A39;
+  border: none;
+}
+
+.creation-main__title {
+  margin-bottom: 25px;
 }
 
 .creation-main__text {
