btns and inputs edits & hovers

--- a/sass/_creation-page-epitaph-media.sass
+++ b/sass/_creation-page-epitaph-media.sass
@@ -50,4 +50,5 @@
     &__attachment
         display: flex
         align-items: center
-        padding: 3px 16px
+        padding: 6px 16px
+        flex-basis: 43.2%
