--- a/sass/_creation-page-main.sass
+++ b/sass/_creation-page-main.sass
@@ -20,7 +20,10 @@
         align-items: center
         cursor: pointer
         margin-bottom: 18px
-        & img
+        transition: background-color 0.3s ease
+        &:hover
+            background-color: #c7dbe2b4
+        & svg
             display: block
             margin: auto
             margin-bottom: 12px
