--- a/sass/_footer.sass
+++ b/sass/_footer.sass
@@ -20,6 +20,9 @@
             margin-right: 40px
             & a
                 color: #C3DAE2
+                transition: color 0.3s ease
+                &:hover
+                    color: $primary
     &__socials
         list-style: none
         display: flex
