--- a/sass/_general.sass
+++ b/sass/_general.sass
@@ -29,11 +29,12 @@ a
     cursor: pointer
     border: 0.5px solid $text-color
     border-radius: 12px
-    padding: 14px 16px
+    padding: 15px 16px
     color: $text-color
     background-color: #fff
     text-align: center
     font-size: 14px
+    min-height: 48px
     & img
         margin-right: 3px
 .creation-btn
@@ -41,6 +42,14 @@ a
     &:hover
         background-color: $primary
         border: 0.5px solid $primary
+        & svg rect
+            fill: #000
+        & svg path
+            fill: #000
+.creation-btn svg rect
+    transition: all .3s ease
+.creation-btn svg path
+    transition: all .3s ease
 .mb-0
     margin-bottom: 0 !important
 
@@ -66,6 +75,8 @@ a
     width: 100%
     color: $text-color
     transition: border .2s ease
+    min-height: 48px
+    caret-color: $primary
     &::placeholder
         font-size: 16px
         line-height: 1.5
