--- a/sass/_general.sass
+++ b/sass/_general.sass
@@ -13,6 +13,8 @@ $secondary: #ff7400
 a
     text-decoration: none
     color: $text-color
+textarea
+    resize: vertical
 
 .container
     max-width: 846px
