--- a/sass/_creation-page-template.sass
+++ b/sass/_creation-page-template.sass
@@ -14,6 +14,8 @@
         border-radius: 28px
         border: 0.5px solid #000
         margin-bottom: 24px
+        & label
+            cursor: pointer
         & img
             width: 100%
     &__info
@@ -32,6 +34,8 @@
     &__name
         text-align: center
         opacity: 0.8
+        display: block
+        cursor: pointer
     &__radio
         position: relative
         margin: auto
