--- a/sass/_footer.sass
+++ b/sass/_footer.sass
@@ -11,6 +11,8 @@
         align-items: center
     &__logo
         margin-right: 120px
+        &-mobile
+            display: none
     &__menu
         list-style: none
         display: flex
@@ -18,6 +20,8 @@
         &-item
             font-size: 14px
             margin-right: 40px
+            &:last-child
+                margin-right: 0
             & a
                 color: #C3DAE2
                 transition: color 0.3s ease
@@ -28,7 +32,9 @@
         display: flex
         align-items: center
         & li
-            margin-left: 30px
+            margin-right: 30px
+            &:last-child
+                margin-right: 0
     &__copyright
         padding-top: 14px
         border-top: 1px solid $text-color
@@ -41,4 +47,47 @@
         & a
             color: #2D4443
             margin-left: 8px
+
+@media screen and (max-width: 1023px)
+    .footer
+        padding: 60px 0 15px
+        &__hero
+            flex-direction: column
+            align-items: center
+            margin-bottom: 60px
+        &__nav
+            flex-direction: column
+            align-items: center
+        &__nav
+            margin-bottom: 40px
+        &__logo
+            margin-right: 0
+            margin-bottom: 40px
+        &__copyright
+            display: flex
+            justify-content: center
+@media screen and (max-width: 425px)
+    .footer
+        &__menu
+            flex-direction: column
+            &-item
+                margin-right: 0px
+                margin-bottom: 20px
+                &:last-child
+                    margin-bottom: 0
+                & a
+                    color: #C3A195
+        &__copyright
+            & span
+                color: #fff
+        &__socials
+            & path
+                fill: #C3A195
+                &.youtube-triangle
+                    fill: #230208
+        &__logo
+            display: none
+            &-mobile
+                display: block
+                margin-bottom: 40px
         
