--- a/style/style.css
+++ b/style/style.css
@@ -240,6 +240,10 @@ textarea {
   margin-right: 120px;
 }
 
+.footer__logo-mobile {
+  display: none;
+}
+
 .footer__menu {
   list-style: none;
   display: -webkit-box;
@@ -253,6 +257,10 @@ textarea {
 .footer__menu-item {
   font-size: 14px;
   margin-right: 40px;
+}
+
+.footer__menu-item:last-child {
+  margin-right: 0;
 }
 
 .footer__menu-item a {
@@ -276,7 +284,11 @@ textarea {
 }
 
 .footer__socials li {
-  margin-left: 30px;
+  margin-right: 30px;
+}
+
+.footer__socials li:last-child {
+  margin-right: 0;
 }
 
 .footer__copyright {
@@ -299,6 +311,81 @@ textarea {
 .footer__copyright a {
   color: #2D4443;
   margin-left: 8px;
+}
+
+@media screen and (max-width: 1023px) {
+  .footer {
+    padding: 60px 0 15px;
+  }
+  .footer__hero {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-bottom: 60px;
+  }
+  .footer__nav {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .footer__nav {
+    margin-bottom: 40px;
+  }
+  .footer__logo {
+    margin-right: 0;
+    margin-bottom: 40px;
+  }
+  .footer__copyright {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .footer__menu {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .footer__menu-item {
+    margin-right: 0px;
+    margin-bottom: 20px;
+  }
+  .footer__menu-item:last-child {
+    margin-bottom: 0;
+  }
+  .footer__menu-item a {
+    color: #C3A195;
+  }
+  .footer__copyright span {
+    color: #fff;
+  }
+  .footer__socials path {
+    fill: #C3A195;
+  }
+  .footer__socials path.youtube-triangle {
+    fill: #230208;
+  }
+  .footer__logo {
+    display: none;
+  }
+  .footer__logo-mobile {
+    display: block;
+    margin-bottom: 40px;
+  }
 }
 
 .bg-light-blue {
