--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -12,3 +12,14 @@
         max-width: 100px
     &__btn
         
+@media screen and (max-width: 767px)
+    .header
+        &__wrapper
+            padding: 26px 30px
+        
+@media screen and (max-width: 425px)
+    .header
+        &__wrapper
+            padding: 16px 20px
+        &__logo
+            max-width: 87px
