--- a/sass/_creation-page-epitaph-media.sass
+++ b/sass/_creation-page-epitaph-media.sass
@@ -52,3 +52,46 @@
         align-items: center
         padding: 6px 16px
         flex-basis: 43.2%
+    &__attachment-mobile
+        display: none
+        align-items: center
+        padding: 6px 16px
+
+@media screen and (max-width: 424px)
+    .creation-epitaph
+        &__text
+            padding: 0 10px
+    .creation-media
+        &__text
+            padding: 0
+        &__photo-wrap
+            width: 110px
+            height: 110px
+        &__photo-hero
+            & svg
+                margin-bottom: 4px
+                width: 17px
+            & p
+                font-size: 12px
+        &__photo-text
+            font-size: 14px
+            margin-bottom: 30px
+            display: flex
+            flex-direction: column
+            & span
+                margin-top: 10px
+                font-size: 12px
+                width: 85%
+        &__inputs
+            flex-direction: column
+            & input
+                flex-basis: 100%
+            & p
+                margin: 18px 0
+        &__attachment
+            display: none
+        &__attachment-mobile
+            display: flex
+            flex-basis: 100%
+            width: 100%
+
