--- a/sass/_creation-page-find.sass
+++ b/sass/_creation-page-find.sass
@@ -7,10 +7,16 @@
         font-family: 'Grafita Special'
         text-align: center
         margin-bottom: 18px
-    &__map
+    &__map-wrap
+        overflow: hidden
         border-radius: 28px
-        width: 100%
         margin: 30px 0
+    &__map
+        width: 100%
+        height: 360px
+        background: url("../assets/cemetary.png") no-repeat
+        background-position: center
+        background-size: cover
     &__coords-wrap
         max-width: 414px
         display: flex
@@ -30,3 +36,12 @@
         & p
             font-size: 14px
             color: $primary
+    &__details-mobile
+        display: none
+
+@media screen and (max-width: 424px)
+    .creation-find
+        & .label span
+            display: none
+        &__details-mobile
+            display: inline !important
