--- a/sass/_general.sass
+++ b/sass/_general.sass
@@ -39,7 +39,7 @@ textarea
     min-height: 48px
     & img
         margin-right: 3px
-.creation-btn
+.btn-with-icon
     transition: background-color .3s ease
     &:hover
         background-color: $primary
@@ -48,9 +48,9 @@ textarea
             fill: #000
         & svg path
             fill: #000
-.creation-btn svg rect
+.btn-with-icon svg rect
     transition: all .3s ease
-.creation-btn svg path
+.btn-with-icon svg path
     transition: all .3s ease
 .mb-0
     margin-bottom: 0 !important
@@ -98,3 +98,9 @@ textarea
     opacity: 0.8
     padding-left: 16px
     margin-bottom: 8px
+
+@media screen and (max-width: 424px)
+    .container
+        padding: 0 20px
+    .text
+        font-size: 16px
