--- a/sass/_creation-page-refs-remembers.sass
+++ b/sass/_creation-page-refs-remembers.sass
@@ -43,6 +43,18 @@
         margin-top: 30px
         min-width: 170px
 
+@media screen and (max-width: 767px)
+    .creation-refs
+        &__text
+            padding: 0
+            max-width: 414px
+            margin-left: auto
+            margin-right: auto
+
+@media screen and (max-width: 560px)
+    .creation-memories
+        &__text
+            padding: 0
 @media screen and (max-width: 424px)
     .creation-refs
         &__text
@@ -53,5 +65,3 @@
             width: 85%
             margin-left: auto
             margin-right: auto
-        &__text
-            padding: 0
