--- a/sass/_creation-page-epitaph-media.sass
+++ b/sass/_creation-page-epitaph-media.sass
@@ -55,6 +55,45 @@
         & .mobile
             display: none
 
+@media screen and (max-width: 767px)
+    .creation-media
+        &__inputs
+            flex-direction: column
+            align-items: flex-start
+            & input
+                width: 300px
+            & p
+                margin: 18px 0
+                padding-left: 16px
+        &__attachment
+            width: 300px
+@media screen and (max-width: 600px)
+    .creation-media
+        &__text
+            padding: 0 30px
+        &__photo-text
+            margin-bottom: 30px
+            display: flex
+            flex-direction: column
+            & span
+                margin-top: 10px
+@media screen and (max-width: 475px)
+    .creation-media
+        &__inputs
+            align-items: center
+            & input
+                flex-basis: 100%
+                width: 100%
+            & p
+                margin: 18px 0
+                padding-left: 0
+        &__attachment
+            width: 100%
+            & .desctop
+                display: none
+            & .mobile
+                display: inline
+
 @media screen and (max-width: 424px)
     .creation-epitaph
         &__text
@@ -74,21 +113,22 @@
         &__photo-text
             font-size: 14px
             margin-bottom: 30px
-            display: flex
-            flex-direction: column
             & span
                 margin-top: 10px
                 font-size: 12px
                 width: 85%
-        &__inputs
-            flex-direction: column
-            & input
-                flex-basis: 100%
-            & p
-                margin: 18px 0
-        &__attachment
-            & .desctop
-                display: none
-            & .mobile
-                display: inline
+        // &__inputs
+        //     align-items: center
+        //     & input
+        //         flex-basis: 100%
+        //         width: 100%
+        //     & p
+        //         margin: 18px 0
+        //         padding-left: 0
+        // &__attachment
+        //     width: 100%
+        //     & .desctop
+        //         display: none
+        //     & .mobile
+        //         display: inline
 
