--- a/sass/style.sass
+++ b/sass/style.sass
@@ -13,10 +13,16 @@
 	src: url('../fonts/calvino/Calvino-Semibold-trial.ttf') format('truetype')
 	font-weight: 600
 	font-style: normal
+@font-face 
+	font-family: 'Calvino Grande'
+	src: url('../fonts/calvino/Calvino-Grande-Regular-trial.ttf') format('truetype')
+	font-weight: 400
+	font-style: normal
 
 @import 'general'
 @import 'header'
 @import 'footer'
+@import 'modal'
 
 @import 'creation-page'
 @import 'creation-page-main'
